Archive2/da/79c0df4b298330/output
main.cpp:1:1: error: 'cout' in namespace 'std' does not name a type
 std::cout << alignof(std::max_align_t) << '\n';
 ^
